<resources>
    <string name="app_name">&appname;</string>
    <string name="login_to_get_started">Login to get started</string>
    <string name="you_will_receive_an_otp_on_this_number">You will receive an OTP on this number.</string>
    <string name="send_otp">Send OTP</string>
    <string name="terms_and_conditions_text"><![CDATA[I accept terms & conditions of HI dude. I also agree to receiving updates on WhatsApp/SMS.]]></string>
    <string name="please_enter_otp_sent_to">Please enter OTP sent to </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="didnt_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="hundred_coins">100 coins</string>
    <string name="used_by_text">Used by 296 people in the last 30 mins</string>
    <string name="add_coins">Add Coins</string>
    <string name="add_quantity_coins">Add %d Coins</string>
    <string name="view_more_plans">View more plans ></string>
    <string name="random">Random</string>
    <string name="rupee_text">\u20B9%d</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="home">Home</string>
    <string name="recent">Recent</string>
    <string name="profile">Profile</string>
    <string name="video">Video</string>
    <string name="video_text">Video 60/mins</string>
    <string name="audio_text">Audio 10/mins</string>
    <string name="no_sessions_yet">No Sessions yet</string>
    <string name="your_past_sessions_will_be_displayed_here">Your past sessions will be displayed here.</string>
    <string name="connect_with_a_hidude">Connect with a %s</string>
    <string name="edit">Edit Profile</string>
    <string name="wallet">Wallet</string>
    <string name="transactions">Transactions</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="logout">Logout</string>
    <string name="need_help">Need Help? Please contact </string>
    <string name="version">version 1.0.0</string>
    <string name="welcome_bonus">Welcome Bonus!</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_reason_text">Please select at least one reason for deleting your account</string>
    <string name="logout_text">Are you sure you want to Log out?</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="invalid_phone_number_text">This phone number is invalid. Please try again.</string>
    <string name="your_avatar">Your Avatar</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">Username</string>
    <string name="user_name_hint">Username must be 4-10 characters.</string>
    <string name="select_your_interests">Select your interests</string>
    <string name="update">Update</string>
    <string name="politics">Politics</string>
    <string name="art">Art</string>
    <string name="_0_100">%1$d/%2$d</string>
    <string name="_0100">0/100</string>
    <string name="not_replying">Not Replying</string>
    <string name="fun_conversation">Fun Conversation</string>
    <string name="help_advice">Helpful Advice</string>
    <string name="friendly_conversation">Friendly Conversation</string>
    <string name="pleasant_voice">Pleasant Voice</string>
    <string name="boring">Boring</string>
    <string name="disinterested">Disinterested</string>
    <string name="bad_conversation">Bad Conversation</string>
    <string name="lack_of_enthusiasm">Lack of Enthusiasm</string>
    <string name="rude_behaviour">Rude Behaviour</string>
    <string name="bad_connectivity">Bad Connectivity</string>
    <string name="sports">Sports</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="foodie">Foodie</string>
    <string name="travel">Travel</string>
    <string name="photography">Photography</string>
    <string name="love">Love</string>
    <string name="cooking">Cooking</string>
    <string name="select_maximum">Select a maximum of 4</string>
    <string name="personalise_yourself">Personalise yourself</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="continue_text">Continue</string>
    <string name="personalise_yourself_hint">Pick your gender and avatar to make your profile unique</string>
    <string name="gender_change_warning">Gender can\'t be changed later</string>
    <string name="language_you_speak">Language you speak</string>
    <string name="language_hint">Find friends who speak your language. Please select one.</string>
    <string name="hindi">Hindi</string>
    <string name="telugu">Telugu</string>
    <string name="malayalam">Malayalam</string>
    <string name="kannada">Kannada</string>
    <string name="punjabi">Punjabi</string>
    <string name="tamil">Tamil</string>
    <string name="above_fields_are_not_editable">Above fields are not editable.</string>
    <string name="gender">Gender</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="profile_updated">Profile updated</string>
    <string name="session_id">"Session ID: "</string>
    <string name="india">India (+91)</string>
    <string name="saudi_arabia">Saudi Arabia (+966)</string>
    <string name="nepal">Nepal (+977)</string>
    <string name="bangladesh">Bangladesh (+880)</string>
    <string name="bahrain">Bahrain (+973)</string>
    <string name="qatar">Qatar (+974)</string>
    <string name="oman">Oman (+968)</string>
    <string name="uae">UAE (+971)</string>
    <string name="kuwait">Kuwait (+965)</string>
    <string name="srilanka">Sri Lanka (+94)</string>
    <string name="malaysia">Malaysia (+60)</string>
    <string name="search_for_country">Search for Country</string>
    <string name="retry_in">Retry in (%s)</string>
    <string name="delete_warning_1">Information related to account will be kept for 30 days and will be completely purged after no activity for continuous 30 days</string>
    <string name="delete_warning_2">"After the account is deleted, you will no longer be able to log in or use the account, and the account cannot be recovered. "</string>
    <string name="view_more">View more</string>
    <string name="delete_warning_3">After the account is deleted, your personal data and account-related information (including but not limited to user name, transaction history, coins, etc.) will be permanently deleted and cannot be retrieved.</string>
    <string name="delete_warning_4">Before the account is deleted, coins must be consumed or withdrawn/ transferred.</string>
    <string name="delete_warning_5">If account is deleted without using/ transferring coins, hidude coins, they will be lost forever and cannot be recovered.</string>
    <string name="delete_warning_6">&appname; has the right to stop the deletion process if the account is subject to litigation and being investigated by a government body without seeking user approval.</string>
    <string name="delete_warning_7">Deleting your account does not constitue exemption or mitigation of responsibility for behaviour committed prior to account\'s deletion</string>
    <string name="view_less">View less</string>
    <string name="not_able_to_here_hidude">Not able to here &appname;</string>
    <string name="abusive_language">Abusive language</string>
    <string name="hidude_not_polite">&appname; not polite</string>
    <string name="hidude_not_interested">&appname; not interested</string>
    <string name="ask_for_money">Ask for money</string>
    <string name="other">Other</string>
    <string name="tell_us_about_your_issue">Tell us about your issue</string>
    <string name="delete_account_text">Are you sure you want to delete your profile?</string>
    <string name="give_us_a_description">Give us a description:</string>
    <string name="description_remaining_text">%d/250</string>
    <string name="description_minimum_text">Minimum 15 letters</string>
    <string name="contact_support_mail">Need Help? Please write to: </string>
    <string name="delete_account_mail_subject">Need Support for User: - Mobile Number: %s, language: %s</string>
    <string name="mail_body" translatable="false">Hi &appname; Team,\n\nMy registered details are as follows:\n1. Mobile number is: %s\n2. Device name: %s\n3. User language: %s\n4. App version code: %d\n\nI need help in the following issue:\n\n{<b>Describe your issue here</b>}\n\nYou can reach out to me at the above number for more information.\n\nThanks,\n</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="tell_us_about_yourself_hint">The information you share will be visible to all your hi dudes</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="enter_your_age_hint">This info will not be shared with Hi dude</string>
    <string name="select_maximum_and_minimum">Select minimum 1 interest, maximum of 4</string>
    <string name="summary_text">Give us a quick summary about you</string>
    <string name="voice_identification">Voice Identification</string>
    <string name="voice_identification_hint">To confirm your identity, please record yourself saying the following sentence</string>
    <string name="tap_and_hold_to_speak">Tap and hold to speak</string>
    <string name="summary_hint_text">Ex:\"I like moview, my favourite one is DDLJ\"</string>
    <string name="you_must_be_at_least_18_years_old">You must be at least 18 years old</string>
    <string name="you_must_be_below_100_years_old">You must be below 100 years old</string>
    <string name="play_to_listen">Play to Listen</string>
    <string name="record_again">Record Again</string>
    <string name="submit">Submit</string>
    <string name="release_to_stop">Release to stop</string>
    <string name="almost_done">Almost done...</string>
    <string name="almost_done_hint">Our team will reach out to you within 24hrs via phone call. This is to explain about safety procedures on the platform.</string>
    <string name="for_any_queries">"For any queries please contact "</string>
    <string name="earnings">Earnings</string>
    <string name="current_balance">Current balance</string>
    <string name="balance_hint_text">Balance should be at least \u20B9%d to withdraw</string>
    <string name="pending">Pending</string>
    <string name="paid">Paid</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="done">Done</string>
    <string name="cancelled">Cancelled</string>
    <string name="transaction_id">Transaction ID:%s</string>
    <string name="skip">Skip</string>
    <string name="getting_started">Getting Started</string>
    <string name="getting_started_hint">Watch the training video to become a successful Super &appname;
        and start earning!</string>
    <string name="complete">Complete</string>
    <string name="withdraw">Withdraw</string>
    <string name="audio">Audio</string>
    <string name="enable_camera_and_microphone">Enable camera and microphone</string>
    <string name="permissions_hint">Allow &appname; to access your camera and microphone to join calls within the app</string>
    <string name="camera">Camera</string>
    <string name="camera_hint"><![CDATA[Settings > Apps > App management > HI dude > Permission > Camera]]></string>
    <string name="microphone_hint"><![CDATA[Settings > Apps > App management > HI dude > Permission > Microphone]]></string>
    <string name="notofications_hint"><![CDATA[Settings > Apps > App management > HI dude > Permission > Notifications]]></string>
    <string name="microphone">Microphone</string>
    <string name="notifications">Notifications</string>
</resources>