<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiend"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.027" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/edit"
        android:rotation="180"
        android:src="@drawable/right_arrow"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        app:layout_constraintTop_toTopOf="@id/gl_top_margin"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.05"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_content_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@id/gl_content_top_margin"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.05"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_permissions_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/enable_camera_and_microphone"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintStart_toEndOf="@+id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_permissions_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/permissions_hint"
        android:textColor="@color/black_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintStart_toEndOf="@+id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_permissions_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/voice_identification_hint"
        app:layout_constraintStart_toEndOf="@+id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_permissions_hint"
        android:background="@drawable/d_button_bg"
        android:backgroundTint="@color/button_background">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/camera_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_camera_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cl_camera"
        app:layout_constraintTop_toTopOf="@+id/cl_camera" />

    <TextView
        android:id="@+id/tv_camera_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera_hint"
        android:textColor="@color/black_light"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_camera_title"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cl_camera" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_microphone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/voice_identification_hint"
        app:layout_constraintStart_toEndOf="@+id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/cl_camera"
        android:background="@drawable/d_button_bg"
        android:backgroundTint="@color/button_background">

        <ImageView
            android:id="@+id/iv_micro_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/mic_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_microphone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/microphone"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cl_microphone"
        app:layout_constraintTop_toTopOf="@+id/cl_microphone" />

    <TextView
        android:id="@+id/tv_microphone_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/microphone_hint"
        android:textColor="@color/black_light"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_microphone_title"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cl_microphone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_notifications"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/cl_microphone"
        android:background="@drawable/d_button_bg"
        android:backgroundTint="@color/button_background">

        <ImageView
            android:id="@+id/iv_notifications"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_notifications"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_notifications_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cl_notifications"
        app:layout_constraintTop_toTopOf="@+id/cl_notifications" />

    <TextView
        android:id="@+id/tv_notifications_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notofications_hint"
        android:textColor="@color/black_light"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_notifications_title"
        app:layout_constraintEnd_toStartOf="@id/gl_right_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cl_notifications" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_18sdp"
        android:textColor="@color/primary_blue"
        android:backgroundTint="@color/button_background_tint"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/gl_right_margin"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        app:layout_constraintTop_toTopOf="@+id/gl_bottom_margin"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="@color/primary_blue"/>
</androidx.constraintlayout.widget.ConstraintLayout>