<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiend"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/edit"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.1"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toEndOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_video"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.65"
        android:layout_marginTop="16dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#321a56"
        android:background="@drawable/card_view_border_video"
        app:layout_constraintEnd_toEndOf="@id/gl_right_margin"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        app:layout_constraintTop_toBottomOf="@+id/gl_top_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/card_view_border_video">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="9:16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.97"
            android:background="@drawable/card_view_border_video" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getting_started"
        android:textColor="#d3cbda"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_video" />

    <TextView
        android:id="@+id/tl_title_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/getting_started_hint"
        android:textColor="#d3cbda"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        app:layout_constraintEnd_toEndOf="@id/gl_right_margin"
        app:layout_constraintTop_toBottomOf="@+id/tl_title" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginBottom="24dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@+id/gl_bottom_margin"
        app:layout_constraintEnd_toEndOf="@id/gl_right_margin"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/complete"
        android:textSize="14sp"
        app:cornerRadius="@dimen/_18sdp"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/button_background_tint"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin"
        />



</androidx.constraintlayout.widget.ConstraintLayout>